Repaired bug with not showing form for new billing address if shipping is selected

--- a/app/assets/stylesheets/application/addresses.css.scss
+++ b/app/assets/stylesheets/application/addresses.css.scss
@@ -1,4 +1,4 @@
-#address_form:nth-child(2) {
+.address_form:nth-child(2) {
   display:none;
 
 }
@@ -18,7 +18,7 @@
 	
 }
   
-#address_form {
+.address_form {
   
   font-family: 'Montserrat';
 	width: 430px;
